part4/4-06-project-v2.0/manifests/todo-app.yaml
# TODO APP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: dowk-22-todo
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: client
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: server
      port: 2333
      protocol: TCP
      targetPort: 8081
---
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: dowk-22-todo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 80
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2333
      - path: /daily-pic
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2333
---
# ROLLOUT
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-dep
  namespace: dowk-22-todo
  labels:
    app: todo-app
spec:
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: { duration: 10s }
      - analysis:
          templates:
          - templateName: cpu-usage
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: client
          imagePullPolicy: Always
          image: CLIENT_IMAGE
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            httpGet:
              path: /ready
              port: 3000
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            httpGet:
               path: /
               port: 3000
        - name: server
          imagePullPolicy: Always
          image: SERVER_IMAGE
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            httpGet:
              path: /ready
              port: 8081
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            httpGet:
               path: /ready
               port: 8081
---
# BROADCASTER DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
  namespace: dowk-22-todo
  labels:
    app: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster-dep
  template:
    metadata:
      labels:
        app: broadcaster-dep
    spec:
      containers:
        - name: broadcaster
          imagePullPolicy: Always
          image: BROADCASTER_IMAGE
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
